// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Backdrop /> renders correctly with an overlay 1`] = `
<div>
  <div
    class="sc-bdVaJa container--overlay jmdKxE"
  >
    <div>
      Component under test
    </div>
  </div>
</div>
`;

exports[`<Backdrop /> renders correctly without an overlay 1`] = `
<div>
  <div>
    Component under test
  </div>
</div>
`;
